# code-lupe-v2

./: .dockerignore  .dvcignore  .env.example  .gitignore  .gitmessage  .golangci.yml  .hadolint.yaml  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_TROUBLESHOOTING.md  Dockerfile.crawler  Dockerfile.downloader  Dockerfile.metrics  Dockerfile.pipeline  Dockerfile.processor  Dockerfile.qwen-5090  Dockerfile.qwen-5090-no-flash  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  METRICS_COMPLETE.md  METRICS_INTEGRATION.md  Makefile  PUBLISH_CHECKLIST.md  PYTHON_TEST_COVERAGE_REPORT.md  QUICK_START_IMPROVEMENTS.md  README.md  SECURITY_NOTICE.md  SECURITY_WARNING.md  TESTING_IMPROVEMENTS_SUMMARY.md  TEST_COVERAGE_REPORT.md  TODO.md  cliff.toml  dashboard.html  docker-compose.resource-limited.yml  docker-compose.secrets.yml  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: changelog.yml  ci.yml  dependency-review.yml  python-ci.yml  security-enhanced-ci.yml  security.yml
agent-lupe/: Cargo.toml  RUST_CODING_AGENT.md
api/: openapi.yaml
cmd/api/: main.go
cmd/migrate/: main.go
config/: config.go
configs/: codelupe_alerts.yml  config.example.json  grafana_dashboard.json  prometheus.yml  prometheus_fixed.yml  prometheus_localhost.yml
configs/grafana/: alerts.yaml  codelupe-dashboard.json
docs/: ARCHITECTURE.md  CI_CD_SECURITY.md  COMPLETE_SOLUTION.md  DOCKERFILE_REVERTED.md  DOCKER_BUILD_FIX.md  DVC_SETUP.md  ERROR_HANDLING.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  MIGRATIONS.md  PROJECT_IMPROVEMENTS.md  QUALITY_FILTERING_FIX.md  QUICK_START.md  README_DOCKER_ULTRA.md  README_scraper.md  SECURITY.md  SUMMARY_QWEN_TRAINER.md  TRAINING_DATA_IMPROVEMENTS.md  WANDB_INTEGRATION.md  WANDB_METRICS_REFERENCE.md
docs/api/: openapi.yaml
docs/deployment/: DEPLOYMENT_CHECKLIST.md
docs/guides/: CONTRIBUTING.md  SECURITY_SAFEGUARDS.md
docs/models/: MODEL_COMPARISON.md  README_MAMBA_ENSEMBLE.md  README_QWEN_5090.md
docs/pipeline/: PIPELINE_README.md  PIPELINE_V2_README.md  README_WINDOWS_PIPELINE.md
elasticsearch/config/: elasticsearch.yml
examples/: circuit_breaker_usage.go
internal/api/: server.go  server_test.go
internal/downloader/: downloader.go  downloader_test.go  git_client.go  git_client_test.go  (+1 more)
kubernetes/: monitoring.yaml  namespace.yaml  postgres.yaml  processor.yaml  storage.yaml  trainer.yaml
mega-scraper/: go.mod  mega_dataset_scraper.go
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_repositories_table.down.sql  000002_add_repositories_table.up.sql  000003_add_training_state_table.down.sql  000003_add_training_state_table.up.sql  README.md
monitoring/: prometheus.yml
scraper/: main.go
scripts/: analyze_dataset.bat  analyze_dataset.sh  build_trainer_fixed.ps1  build_trainer_proper.ps1  build_with_flash_attention.ps1  check-k8s.ps1  check_nas_and_rebuild.ps1  check_working.ps1  cleanup_repo.sh  debug-k8s.ps1  debug.ps1  deploy_pipeline_v2.sh  fallback_trainer.ps1  fast_fix.ps1  fix_containers.ps1  generate-changelog.sh  migrate.sh  monitor.ps1  monitor_fixes.ps1  monitor_training.ps1  monitor_training.sh  quick_rebuild.ps1  quick_rebuild.sh  quick_start_others.ps1  rebuild.ps1  rebuild_and_restart.ps1  rebuild_and_restart.sh  rebuild_services.ps1  setup_codestral.bat  setup_codestral.sh  setup_monitoring.sh  setup_secrets.sh  start-k8s.ps1  start-ultra-training.sh  start-windows-pipeline.bat  start_massive.ps1  start_massive.sh  start_pipeline.ps1  start_pipeline.sh  stop-k8s.ps1  (+4 more)
(+89 files in other folders)
